@@ -1,3 +1,7 @@
+2004-09-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/piano-pedal-bracket.cc (print): robustify.
+
 2004-09-22  Pedro Kroger  <kroeger@pedrokroeger.net>
 
 	* scm/paper.scm (set-paper-dimensions): add printfirstpagenumber.
